# Aerele_practise

./: day 1.py  day 2.py  day 3.py  day4.ipynb  day_3.py  day_5.ipynb  students.txt  unittest.py
Invoice/: api.py  database.py  model.py  services.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
package/: __init__.py  calculate_tax.py  main.py  pyproject.toml
package/mypackage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
